@@ -12,7 +12,9 @@ Build-Depends: debhelper (>= 9),
                dpkg-dev (>= 1.16.1),
                pkg-kde-tools,
                qtbase5-private-dev (>= 5.2.1+dfsg~),
-               qtdeclarative5-private-dev (>= 5.2.1~)
+               qtdeclarative5-private-dev (>= 5.2.1~),
+               xauth,
+               xvfb
 Build-Depends-Indep: libqt5sql5-sqlite (>= 5.2.1+dfsg~),
                      qttools5-dev-tools (>= 5.2.1~)
 Standards-Version: 3.9.5
