@@ -1,5 +1,7 @@
 qtquickcontrols-opensource-src (5.2.1-3) UNRELEASED; urgency=medium
 
+  [ Dmitry Shachnev ]
+  * Run tests during build.
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sun, 02 Mar 2014 15:20:28 +0400
 
